# hfts_grasp_planner

./: .clang-format  .gitignore  CMakeLists.txt  package.xml  setup.py  tags
cfg/: integrated_hfts_planner.cfg
config/: hfts_params_sdh.yaml  integrated_hfts_params_r850.yaml
data/2d/: grasps.xcf
data/bunny/: objectModel.ply
data/crayola_24/: crayola_24.kinbody.xml  crayola_24_ct.mtl
data/elmers_glue/: elmers_glue.kinbody.xml  elmers_washable_no_run_school_glue.mtl  elmers_washable_no_run_school_glue.ply
data/environments/: cabinet_high_clutter.xml  cabinet_low_clutter.xml  cluttered_env.xml  cluttered_env_scaled.stl  cluttered_env_yumi.xml  placement_exp_0.xml  placement_exp_1.xml  placement_exp_2.xml  placement_exp_3.xml  placement_test.fcstd  shelf_low_clutter.xml  simple_env.xml  table_high_clutter.xml  table_low_clutter.xml  table_r850.xml
data/pencil_basket/: basket.mtl
data/placement_problems/: apc_shelf.yaml  inside_shelf.yaml  on_top_shelf.yaml  plcmt_exp_template.yaml  rpl_shelf.yaml  rpl_shelf_dmg.yaml  table_top.yaml  table_top_dmg.yaml  test_problem.yaml  test_problem2.yaml
data/placement_problems/grasps/: crayola.yaml  dr_browns_bottle_brush.yaml  expo_eraser.yaml  expo_pen.yaml  outlet_plugs.yaml
data/placement_problems/iros_experiments/: template.yaml
data/placement_problems/objects/: base.urdf  crayola.urdf  elmers_glue.urdf  shelf.urdf
data/scaled_table/: scaled_table.kinbody.xml
data/stick/: objectModel.stl
data/wine_glass/: wine_glass.kinbody.xml
launch/: markers.launch
models/environments/: cabinet_high_clutter.xml  cabinet_low_clutter.xml  cluttered_env.stl  cluttered_env.xml  cluttered_env_scaled.ply  cluttered_env_yumi.xml  placement_exp_0.xml  placement_exp_1.xml  placement_exp_2.xml  placement_exp_3.xml  rpl_lab_experiment.xml  shelf_low_clutter.xml  simple_env.xml  table_high_clutter.xml  table_low_clutter.xml  table_r850.xml  test_env_r850.xml  test_env_r850_sdh.xml
models/objects/bunny/: placement_filters.npy  placement_planes.npz
models/objects/cabinet/: cabinet.stl  cabinet_padded.stl  kinbody.xml  markers.yaml
models/objects/cracker_box/: cheezit.stl  kinbody.xml  markers.yaml
models/objects/crayola/: crayola.kinbody.xml  objectModel.obj.mtl
models/objects/crayola_24/: crayola_24.kinbody.xml  crayola_24.stl  dmg_info.yaml  object13_transforms.yaml
models/objects/elmers_glue/: dmg_info.yaml  elmers_glue.kinbody.xml  glue.stl  markers.yaml
models/objects/expo/: component_normal_expo_9_20.txt  dmg_info.yaml  expo.kinbody.xml  expo.stl  graph_expo_9_20.txt  markers.yaml  node_angle_angle_component_expo_9_20.txt  node_angle_expo_9_20.txt  node_component_expo_9_20.txt  node_position_expo_9_20.txt
models/objects/mustard/: kinbody.xml  markers.yaml  mustard.stl
models/objects/pencil_basket/: pencil_basket.kinbody.xml
models/r850/: r850_robotiq.xml
models/yumi/: ball_description.yaml  yumi.xml  yumi_gripper_l.kinbody.xml  yumi_gripper_l.robot.xml  yumi_gripper_r.kinbody.xml  yumi_gripper_r.robot.xml  yumi_render.xml
python-src/hfts_grasp_planner/: core.py  grasp_goal_sampler.py  hierarchy_visualization.py  ik_solver.py  integrated_hfts_planner.py  integrated_plcmt_planner.py  orsampler.py  placement_planner.py  robot_hand.py  robotiqloader.py  rrt.py  sampler.py  urdf_loader.py  utils.py
scripts/: ball_approximation_viewer.py  dmg_experiments.py  generate_ik_model.py  generate_occupancy_grid.py  generate_scene_sdf.py  generate_sdf.py  generate_sdf_gradient.py  hfts_integrated_planner_node.py  hfts_planner_node.py  hierarchy_visualizer_node.py  make_grasp.py  mcts_visualizer_node.py  object_tf_publisher.py  run_experiments.py  show_com.py  test_kinbody_octree.py  test_placement.py
scripts/mgplanning/: create_2d_cost_spaces.py  create_2d_goal_file.py  generate_grasp_goals.py  generate_yumi_goals.py  reduce_num_grasps.py  run_evaluation.py  run_mgplanner_yumi.py  visualize_exploration.py
scripts/notebooks/: mg_planner_evaluation.ipynb
scripts/test_scripts/: learn_or.py  test_astar.py  test_bullet_physics.py  test_cclearance.py  test_clearance.py  test_collision.py  test_cuda_interpolation.py  test_dmg.py  test_dmg_placement.py  test_hfts_planner.py  test_integrated_hfts_planner.py  test_integrated_placement.py  test_jacobian.py  test_kinbody_octree.py  test_mcts.py  test_multi_grasp_mp.py  test_physics.py  test_placement.py  test_placement2.py  test_placement_dmg.py  test_placement_hierarchy.py  test_quasistatic_falling.py  test_reachability.py  test_ros_or.py  test_script.py  test_sdf.py  test_sdf_gradients.py  test_trac_ik.py  test_xml.py
src/hfts_grasp_planner/: core.py  hfts_generation.py  integrated_hfts_planner.py  integrated_plcmt_planner.py  robot_hand.py  utils.py
src/hfts_grasp_planner/placement/mp/: Astar.cpp  CMakeLists.txt  GraphSearch.cpp  ImgGraphSearch.cpp  MultiGraspBiRRT.cpp  MultiGraspMP.cpp  ORGraphSearch.cpp  ORMultiGraspMPPlugin.cpp
src/hfts_grasp_planner/placement/mp/mgsearch/: Graphs.cpp  ImageStateSpace.cpp  LPAStar.cpp  LazyGraph.cpp  MGGraphSearchMP.cpp  MultiGraspRoadmap.cpp  ORCostsAndValidity.cpp  ORStateSpace.cpp
src/hfts_grasp_planner/placement/mp/ompl/: ORRedirectableBiRRT.cpp
src/hfts_grasp_planner/placement/mp/test/: test_imagespace.cpp  test_img_planner.cpp  test_mplanner.cpp
src/hfts_grasp_planner/placement/mp/utils/: Profiling.cpp
src/hfts_grasp_planner/placement/objective/: CMakeLists.txt  clearance.cpp
src/hfts_grasp_planner/placement/reachability/: CMakeLists.txt  pyreachability.cpp  reachability.cpp
yamls/grasp_generation/: yumi_grasps.yaml
yamls/mg_evaluation_queries/: default_tests.yaml  paper_experiments_2d.yaml  paper_experiments_yumi.yaml  paper_experiments_yumi_picking.yaml  paper_experiments_yumi_placing.yaml  test_cases.yaml
yamls/mg_grasp_generation/: kr5_850_sdh_grasps.yaml  yumi_left_arm_expo_grasps.yaml  yumi_right_arm_expo_grasps.yaml
yamls/placement_problems/: apc_shelf.yaml  inside_shelf.yaml  on_top_shelf.yaml  plcmt_exp_template.yaml  real_experiments.yaml  rpl_shelf.yaml  table_top.yaml  test_problem.yaml
(+200 files in other folders)
